--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
     </section>
 
-    <!-- <section class="container text-center my-5 pt-5">
+    <section class="container text-center my-5 pt-5">
       <h2 class="fw-bold mb-3">Features</h2>
       <div class="row justify-content-center">
         <div class="col-md-10 col-lg-5">
@@ -128,7 +128,7 @@
       </div>
     </section>
 
-    <section class="container text-center d-flex flex-column align-items-center my-5 py-5 extensions">
+    <!-- <section class="container text-center d-flex flex-column align-items-center my-5 py-5 extensions">
       <h2 class="fw-bold mb-3">Download the extension</h2>
       <div class="row justify-content-center text-left">
         <div class="col-md-10 col-lg-8">
