--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               role="tab">Easy Sharing</button>
           </li>
         </ul>
-        <div class="tab-content pt-4 pb-5" id="featuresTabsContent">
+        <div class="tab-content pt-4 pb-5 " id="featuresTabsContent">
           <div class="tab-pane fade show active" id="simple" role="tabpanel">
             <div class="row align-items-center">
               <div class="col-lg-6 mb-4 mb-lg-0 text-lg-start">
@@ -128,7 +128,7 @@
       </div>
     </section>
 
-    <!-- <section class="container text-center d-flex flex-column align-items-center my-5 py-5 extensions">
+    <section class="container text-center d-flex flex-column align-items-center my-5 py-5 extensions">
       <h2 class="fw-bold mb-3">Download the extension</h2>
       <div class="row justify-content-center text-left">
         <div class="col-md-10 col-lg-8">
@@ -176,7 +176,7 @@
     </div>
     </section>
 
-    <section class="container text-center align-items-center my-5 faqs overflow-hidden">
+    <!-- <section class="container text-center align-items-center my-5 faqs overflow-hidden">
       <h2 class="fw-bold mb-3">Frequently Asked Questions</h2>
       <div class="row justify-content-center overflow-hidden">
         <div class="col col-md-10 col-lg-9">
