s1.2-bootstrap-sass-nivell-1-exercici-4

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
     </div>
     </section>
 
-    <!-- <section class="container text-center align-items-center my-5 faqs overflow-hidden">
+    <section class="container text-center align-items-center my-5 faqs overflow-hidden">
       <h2 class="fw-bold mb-3">Frequently Asked Questions</h2>
       <div class="row justify-content-center overflow-hidden">
         <div class="col col-md-10 col-lg-9">
@@ -239,7 +239,7 @@
         </div>
         
       </div>
-    </section> -->
+    </section>
   </main>
   <!-- <footer>
         <img src="public/logo-bookmark.svg" alt="">
